crates/djls-templates/src/snapshots/djls_templates__parser__tests__filter_parsing_tests__colon_inside_quotes.snap
---
source: crates/djls-templates/src/parser.rs
expression: convert_nodelist_for_testing(&nodelist)
---
nodelist:
  - type: Variable
    var: x
    filters:
      - name: date
        arg: "\"H:i:s\""
        span:
          - 5
          - 12
    span:
      - 2
      - 16
    full_span:
      - 0
      - 20
