crates/djls-templates/src/snapshots/djls_templates__parser__tests__filter_parsing_tests__complex_chain.snap
---
source: crates/djls-templates/src/parser.rs
expression: convert_nodelist_for_testing(&nodelist)
---
nodelist:
  - type: Variable
    var: value
    filters:
      - name: default
        arg: "\"N/A\""
        span:
          - 9
          - 13
      - name: title
        arg: ~
        span:
          - 23
          - 5
      - name: truncatewords
        arg: "5"
        span:
          - 29
          - 15
    span:
      - 2
      - 43
    full_span:
      - 0
      - 47
