crates/djls-templates/src/snapshots/djls_templates__parser__tests__filter_parsing_tests__escaped_backslash.snap
---
source: crates/djls-templates/src/parser.rs
expression: convert_nodelist_for_testing(&nodelist)
---
nodelist:
  - type: Variable
    var: x
    filters:
      - name: default
        arg: "\"path\\\\to\\\\file\""
        span:
          - 5
          - 24
    span:
      - 2
      - 28
    full_span:
      - 0
      - 32
