crates/djls-templates/src/snapshots/djls_templates__parser__tests__filter_parsing_tests__escaped_pipe_in_quotes.snap
---
source: crates/djls-templates/src/parser.rs
expression: convert_nodelist_for_testing(&nodelist)
---
nodelist:
  - type: Variable
    var: x
    filters:
      - name: default
        arg: "\"a\\\"\""
        span:
          - 5
          - 13
      - name: upper
        arg: ~
        span:
          - 19
          - 5
    span:
      - 2
      - 23
    full_span:
      - 0
      - 27
