crates/djls-templates/src/snapshots/djls_templates__parser__tests__filter_parsing_tests__filter_arg_span_with_whitespace_after_colon.snap
---
source: crates/djls-templates/src/parser.rs
expression: convert_nodelist_for_testing(&nodelist)
---
nodelist:
  - type: Variable
    var: x
    filters:
      - name: default
        arg: "'value'"
        span:
          - 5
          - 16
    span:
      - 2
      - 20
    full_span:
      - 0
      - 24
