crates/djls-templates/src/snapshots/djls_templates__parser__tests__filter_parsing_tests__filter_span_accuracy.snap
---
source: crates/djls-templates/src/parser.rs
expression: convert_nodelist_for_testing(&nodelist)
---
nodelist:
  - type: Variable
    var: v
    filters:
      - name: ab
        arg: ~
        span:
          - 5
          - 2
      - name: cd
        arg: x
        span:
          - 8
          - 4
    span:
      - 2
      - 11
    full_span:
      - 0
      - 15
