crates/djls-templates/src/snapshots/djls_templates__parser__tests__filter_parsing_tests__filter_with_numeric_arg.snap
---
source: crates/djls-templates/src/parser.rs
expression: convert_nodelist_for_testing(&nodelist)
---
nodelist:
  - type: Variable
    var: value
    filters:
      - name: truncatewords
        arg: "30"
        span:
          - 9
          - 16
    span:
      - 2
      - 24
    full_span:
      - 0
      - 28
