crates/djls-templates/src/snapshots/djls_templates__parser__tests__filter_parsing_tests__leading_whitespace_before_var.snap
---
source: crates/djls-templates/src/parser.rs
expression: convert_nodelist_for_testing(&nodelist)
---
nodelist:
  - type: Variable
    var: value
    filters:
      - name: filter
        arg: ~
        span:
          - 10
          - 6
    span:
      - 2
      - 15
    full_span:
      - 0
      - 19
